--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       </div>
  <!-- Área central com 4 grids -->
  <section class="conteudo">
-    <div class="box">
+    <div class="caixa">
       <img src="https://picsum.photos/250/150" alt="Imagem 1">
     </div>
-    <div class="box">
+    <div class="caixa">
       <img src="https://picsum.photos/id/237/250/150" alt="Imagem 2">
       
     </div>
-    <div class="box">
+    <div class="caixa">
       <img src="https://picsum.photos/seed/picsum/250/150" alt="Imagem 3">
     </div>
-    <div class="box">
+    <div class="caixa">
       <img src="https://picsum.photos/250/150?grayscale" alt="Imagem 4">
     </div>
   </section>
